--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Garima19dec.github.io/react_univoUI",
   "name": "form",
   "version": "0.1.0",
   "private": true,
@@ -19,7 +20,10 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
+  "scripts":
+   {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,4 +47,5 @@
       "last 1 safari version"
     ]
   }
+ 
 }
